syntax = "proto3";

package chat;

option go_package = "socialnet/services/chat/gen;chatpb";

import "google/api/annotations.proto";
import "auth.proto";

// ===========================
// SERVICE
// ===========================

service ChatService {
  rpc CreateChat(CreateChatRequest) returns (Chat) {
    option (google.api.http) = {
      post: "/api/v1/chats"
      body: "*"
    };
  }

  rpc GetChat(GetChatRequest) returns (Chat) {
    option (google.api.http) = {
      get: "/api/v1/chats/{id}"
    };
  }

  rpc ListChats(EmptyRequest) returns (Chats) {
    option (google.api.http) = {
      get: "/api/v1/chats"
    };
  }

  rpc SendMessage(SendMessageRequest) returns (Message) {
    option (google.api.http) = {
      post: "/api/v1/chats/{chat_id}/messages"
      body: "*"
    };
  }

  rpc ListMessages(ListMessagesRequest) returns (Messages) {
    option (google.api.http) = {
      get: "/api/v1/chats/{chat_id}/messages"
    };
  }

  rpc DeleteChat(DeleteChatRequest) returns (auth.Confirmation) {
    option (google.api.http) = {
      delete: "/api/v1/chats/{id}"
    };
  }

  rpc MarkAsRead(MarkAsReadRequest) returns (auth.Confirmation) {
    option (google.api.http) = {
      post: "/api/v1/chats/{chat_id}/messages/{message_id}/read"
      body: "*"
    };
  }

  // ONLY SERVER STREAMING (grpc-web compatible)
  rpc SubscribeMessages(SubscribeRequest) returns (stream Message);
}

// ===========================
// MODELS
// ===========================

message Chat {
  string id = 1;
  string name = 2;
  repeated string participants = 3;

  string last_message = 4          [json_name = "last_message"];
  string last_sender_id = 5        [json_name = "last_sender_id"];
  string last_message_time = 6     [json_name = "last_message_time"];

  bool is_group = 7                [json_name = "is_group"];

  string created_at = 8            [json_name = "created_at"];
  string updated_at = 9            [json_name = "updated_at"];
}

message Chats {
  repeated Chat chats = 1;
}

message Message {
  string id = 1;
  string chat_id = 2           [json_name = "chat_id"];
  string sender_id = 3         [json_name = "sender_id"];

  string content = 4;
  string content_type = 5      [json_name = "content_type"];
  string media_url = 6         [json_name = "media_url"];

  string created_at = 7        [json_name = "created_at"];
  bool read = 8;
}

message Messages {
  repeated Message messages = 1;
}

// ===========================
// REQUESTS
// ===========================

message CreateChatRequest {
  repeated string participants = 1;
  string name = 2;
}

message GetChatRequest {
  string id = 1;
}

message DeleteChatRequest {
  string id = 1;
}

message SendMessageRequest {
  string chat_id = 1     [json_name = "chat_id"];
  string content = 2;
  string content_type = 3 [json_name = "content_type"];
  string media_url = 4    [json_name = "media_url"];
}

message ListMessagesRequest {
  string chat_id = 1 [json_name = "chat_id"];
  int32 limit = 2;
  int32 offset = 3;
}

message EmptyRequest {}

message SubscribeRequest {
  repeated string chat_ids = 1;
}

message MarkAsReadRequest {
  string chat_id = 1 [json_name = "chat_id"];
  string message_id = 2 [json_name = "message_id"];
}